editor-components/location/location2/location2.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;

.container {
  .content-container {
    padding: 80px 50px 40px !important;

    .max-content {
      .header {
        display: flex;
        flex-direction: column;
        width: 100%;

        &.center {
          align-items: center;
          text-align: center;

          .title-with-socials,
          .description-container {
            justify-content: center;
            text-align: center;
            width: 100%;
          }


          .socials {
            justify-content: center !important;
          }
        }

        &.left {
          align-items: flex-start !important;
          text-align: left !important;

          .subtitle-row,
          .title-with-socials,
          .description-container {
            justify-content: flex-start !important;
            text-align: left !important;
            width: 100% !important;


            .subtitle {
              text-align: left !important;
              width: fit-content !important;
            }

            .title,
            .description-text {
              text-align: left !important;
              width: 100% !important;
            }


          }

          .socials {
            justify-content: flex-start !important;
          }
        }

        .subtitle-row,
        .title-with-socials,
        .description-container {
          display: flex;
          align-items: center;
          gap: var(--composer-gap-md);
          width: 100%;
        }

        .subtitle {
          text-align: left !important;
          width: fit-content !important;
          margin-left: 0px !important;
        }

        .title,
        .description-text {
          text-align: left !important;
        }

        .description-text {
          color: var(--composer-tertiary-color);
        }

        .socials {
          display: flex !important;
          gap: var(--composer-gap-sm);
          align-items: center;

          .socials-container {
            display: flex;
            align-items: center;
            justify-content: center;

            .social-button {
              background-color: var(--composer-primary-color) !important;
              color: var(--composer-font-color-secondary) !important;
              width: var(--composer-gap-xl);
              height: var(--composer-gap-xl);
              padding: var(--composer-gap-sm);
              border: none;
              display: flex;
              align-items: center;
              justify-content: center;
              border-radius: var(--composer-border-radius-sm);

              &:hover {
                background-color: var(--composer-secondary-color) !important;
              }

              .icon {
                color: var(--composer-font-color-secondary) !important;
                width: 20px;
                height: 20px;
                font-size: 1.5rem;
                display: flex;
                align-items: center;
                justify-content: center;
              }
            }
          }
        }
      }
    }
  }

  .middle-content {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: color-mix(in srgb, var(--composer-html-background), var(--composer-font-color-primary) 5%);
    width: 100%;

    .middle-grid {
      max-width: var(--composer-content-width);
      margin: auto;
      width: 100%;
      padding: var(--composer-gap-md);
      box-sizing: border-box;
    }

    .middle-grid .element-container {
      padding: var(--composer-gap-md);
      box-sizing: border-box;
      text-align: center;

      .icon {
        text-align: center;
        width: 40px;
        height: 40px;
        color: var(--composer-primary-color);
        font-size: 3rem;
      }

      .content-title-container {
        text-align: center;

        .content-title {
          color: var(--composer-font-color-primary);
        }
      }

      .description-wrapper {
        .content-description {
          margin-top: var(--composer-gap-sm);
          color: var(--composer-tertiary-color);
          text-align: center;
          display: flex;
          flex-direction: column;
        }
      }
    }
  }

  .map-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    border-radius: var(--composer-border-radius-sm);
    overflow: hidden;

    .map {
      width: 100%;
      height: 600px;
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .content-container {
      padding: 80px 40px 20px !important;
    }

    .middle-content {
      .middle-grid {
        padding: var(--composer-gap-md) var(--composer-gap-lg);
        gap: var(--composer-gap-xl);
      }

      .middle-grid .element-container {
        .icon {
          font-size: 2.5rem;
        }
      }
    }

    .map-container {
      .map {
        width: 100%;
        height: 500px;
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .content-container {
      padding: 50px 20px !important;

      .max-content {
        .header {
          display: flex;
          flex-direction: column !important;

          &.center {
            align-items: center !important;

            .subtitle-row,
            .title-with-socials,
            .description-container {
              align-items: center !important;
              text-align: center !important;

              .subtitle {
                text-align: center !important;
                width: fit-content !important;
                margin-left: auto !important;
              }

              .title,
              .description-text {
                text-align: center !important;
              }

            }

            .socials {
              justify-content: center !important;
            }
          }

          &.left {
            align-items: flex-start !important;

            .subtitle-row,
            .title-with-socials,
            .description-container {
              align-items: flex-start !important;
              text-align: left !important;
              margin-left: 0px !important;
              width: 100% !important;

              .subtitle {
                text-align: left !important;
                width: fit-content !important;
                margin-left: 0px !important;
              }

              .title,
              .description-text {
                text-align: left !important;
                width: 100% !important;
              }


              .socials {
                justify-content: flex-start !important;
                width: auto !important;

                .socials-container {
                  width: auto !important;

                  .social-button {
                    .icon {
                      width: 15px;
                      height: 15px;
                      font-size: 1.5rem;
                    }
                  }
                }
              }
            }
          }

          .subtitle-row,
          .title-with-socials,
          .description-container {
            width: 100% !important;
            display: flex !important;
            flex-direction: column !important;
            gap: var(--composer-gap-md);
          }

          .socials {
            display: flex !important;
            gap: var(--composer-gap-sm) !important;
          }

          .socials-container {
            display: flex;
          }
        }
      }
    }

    .middle-content {
      .middle-grid .element-container {
        .icon {
          font-size: 2rem;
          width: 25px;
          height: 25px;
        }
      }
    }

    .map-container {
      .map {
        width: 100%;
        height: 350px;
      }
    }
  }
}

